# saikoro-api

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  train.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml  pre-commit.yaml
app/: main.py  train.py
app/data/: dice.csv
data/: dice.csv
script/: update.sh
