[tool.poetry]
name = "saikoro-api"
version = "0.1.0"
description = "A web api for dice prediction."
authors = ["Giuseppe Tinti Tomio"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
pre-commit = "^2.12.1"

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
